--- a/for.html
+++ b/for.html
@@ -29,6 +29,20 @@
       for (let i = 0; i < 5; i += 1) {
         document.write(`hi ${i + 1}번째 <br>`);
       }
+
+      // if(조건){ 조건이 true일 떄 실행할 코드}
+      let age = 80;
+      if (age < 20) {
+        console.log(`미성년자!`);
+      }
+      // else if { 여러 조건 제시 시 사용}
+      else if (age > 70) {
+        console.log(`노인!`);
+      }
+      // else { 조건이 false일 때 실행할 코드}
+      else {
+        console.log(`성인!`);
+      }
     </script>
   </body>
 </html>
