--- a/14th-assignment/js-day9/js-day9.html
+++ b/14th-assignment/js-day9/js-day9.html
@@ -8,14 +8,21 @@
       Need a visual blank slate?
       Remove all code in `styles.css`!
     -->
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="js-day9.css" />
     <script type="module" src="js-day9.js"></script>
   </head>
   <body>
-    <h2 id="title">햄버거 주문서</h2>
-    <ul class="todo"></ul>
-    <ul id="itemList"></ul>
-    <button class="button" id="addButton">+ 추가</button>
-    <button class="button" id="removeButton">- 제거</button>
+    <div id="container">
+      <div id="menu">
+        <h2 id="title">햄버거 주문서</h2>
+        <div>
+          <button class="button" id="addButton">+ 추가</button>
+          <button class="button" id="removeButton">- 제거</button>
+        </div>
+        <span> 메뉴를 추가해주세요!</span>
+        <ul class="todo"></ul>
+        <ul id="itemList"></ul>
+      </div>
+    </div>
   </body>
 </html>
