--- a/14th-assignment/js-day10/index.html
+++ b/14th-assignment/js-day10/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>오늘의 온도</title>
+    <title>⏱️ 스톱워치</title>
+    <link rel="stylesheet" href="./src/style.css" />
   </head>
   <body>
-    <h1 class="title">☀️ 오늘의 날씨</h1>
-    <div id="weather"></div>
-    <script type="module" src="src/js-day10.js"></script>
+    <div id="timer" class="time">0000/00/00 0:0:0</div>
+    <button id="stop">멈춰!</button>
+    <div id="record" class="time"></div>
+    <script type="module" src="/src/js-day10.js"></script>
   </body>
 </html>
